[project]
name = "folio-user-import-manager"
# Make sure to also update the cli
version = "0.1.0"
description = "Initiates, monitors, and reports on mod-user-import operations in FOLIO."
authors = [
    {name = "Katherine Bargar", email = "kbargar@fivecolleges.edu"},
]
dependencies = ["polars<1.23", "pandera[polars]>=0.19"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
lint = [
    "ruff>=0.9.10",
    "pre-commit-hooks>=5.0.0",
    "mypy>=1.15.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cases>=3.8.6",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
target-version = "py313"
[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["ANN401", "D105", "FIX002", "PLR2004", "TD002", "TD003", "COM812"]
pydocstyle.convention = "google"
[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D", "INP001", "N813", "S101"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "python -m pytest -vv"
